# pullpito

./: .gitignore  .travis.yml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  pull-request-timeline.graphql  schema.graphql
src/github_events/: mod.rs
test/: github_event_with_unknown_enums.json  pullpito_github_events.json  python_peps_github_events.json
