[package]
name = "pullpito"
version = "0.1.0"
authors = ["Nicolas Kosinski <nicokosi@yahoo.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
structopt = "0.3"
regex = "1.3"
lazy_static = "1.4"
