[package]
name = "pullpito"
version = "0.1.1"
authors = ["Nicolas Kosinski <nicokosi@yahoo.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.9"
structopt = "0.3"
regex = "1.7"
lazy_static = "1.4"
