[package]
name = "pullpito"
version = "0.1.1"
description = "Command-line for GitHub pull request statistics 🧪"
repository = "https://github.com/nicokosi/pullpito"
readme = "README.md"
keywords = ["github", "cli", "pull-request", "summary"]
categories = ["cli", "cli-tools"]
license = "MIT"
authors = ["Nicolas Kosinski <nicokosi@yahoo.com>"]
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["blocking"] }
structopt = "0.3"
regex = "1.12"
lazy_static = "1.4"

[lib]
doctest = false
